# ve301

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENCE.md  Makefile  Makefile.general  README.md  compile_commands.json  sample.config  ve301.cflags  ve301.creator  ve301.cxxflags  ve301.files  ve301.includes  ve301_new.creator.user.d5b3508  ve301_new.files  ve301_new.includes
PC/: .gitignore  Makefile  audio.gcda  audio.gcno  base.gcda  base.gcno  bluetooth.gcda  bluetooth.gcno  glyph_obj.gcda  glyph_obj.gcno  logging_output_test  logging_output_test_trace  main.c.gcov  main.gcda  main.gcno  mainObjective  menu.c.gcov  menu.gcda  menu.gcno  player_test  sdl_util.gcda  sdl_util.gcno  stdio2.h.gcov  text_obj.gcda  text_obj.gcno  ve301  weather.gcda  weather.gcno
Raspberry/: .gitignore  Dockerfile  Dockerfile.armhf  Makefile  build-docker.sh  config  config.ve301  install_to_ve301.sh  ve301
cmake/toolchains/: raspberry-aarch64.cmake
config/: config  theme.mauve
playground/: Makefile  test_bump_mapping  test_bump_mapping.c
sample-config/: config  podcasts
src/: audio.c  audio.h  base.c  base.h  bluetooth.c  bluetooth.h  glyph_obj.c  input_menu.c  input_menu.h  log_contexts.c  log_contexts.h  main.c  mainObjective.cpp  menu.c  menu.h  player.c  player.h  radio_app.c  radio_app.h  radio_app_snippets.c  radio_browser_menu.c  radio_browser_menu.h  rotaryencoder.c  rotaryencoder.h  sdl_util.c  sdl_util.h  test.c  test_sdl_ttf  text_obj.c  theme.c  theme.h  weather.c  weather.h  wifi.c  wifi.h
src/audio/: alsa.c  alsa.h  audio.c  audio.h  bluetooth.c  bluetooth.h  media_player.h  mpd_media_player.c  mpd_player.c  player.c  player.h  player_if.h  playlist.c  playlist.h  song.c  song.h  spotify.c  spotify.h
src/base/: base.c  base.h  config.c  config.h  log_contexts.c  log_contexts.h  logging.c  logging.h  util.c  util.h
src/input_menu/: input_menu.c  input_menu.h
src/java/: menu_jni.c  menu_jni.h  org_ljunkie_ve301_Application.c  org_ljunkie_ve301_Application.h  org_ljunkie_ve301_Menu.c  org_ljunkie_ve301_Menu.h  org_ljunkie_ve301_MenuControl.c  org_ljunkie_ve301_MenuControl.h  org_ljunkie_ve301_MenuItem.c  org_ljunkie_ve301_MenuItem.h
src/menu/: AGENTS.md  Menu.cpp  Menu.h  MenuCtrl.cpp  MenuCtrl.h  MenuItem.cpp  MenuItem.h  glyph_obj.c  glyph_obj.h  menu.c  menu.h  menu_ctrl.c  menu_ctrl.h  menu_ctrl_priv.h  menu_item.c  menu_item.h  menu_item_priv.h  menu_menu.c  menu_menu.h  menu_menu_priv.h  menu_web.c  menu_web.h  menucontrol.cpp  menucontrol.h  text_obj.c  text_obj.h
src/menu/cpp/: Menu.cpp  Menu.h  MenuCtrl.cpp  MenuCtrl.h  MenuItem.cpp  MenuItem.h
src/menu/web/: index.html  menu_web.c  menu_web.h
src/podcast/: menu.c  menu.h  podcast.c  podcast.h
src/radio_app/: actions.c  config.c  config.h  core.c  info_menu.c  navigation.h  navigation_hooks.c  navigation_menu.c  network_menu.c  players.c  private.h  radio_app.h  theme.c  theme.h  themes.c  volume_menu.c
src/radio_browser/: menu.c  menu.h  radio_browser.c  radio_browser.h
src/raspberry/: rotaryencoder.c  rotaryencoder.h
src/tests/: logging_output_test.c  test.c  test.h  test_mutex.c
src/tests/audio/player/: player_test.c
src/util/: sdl_util.c  sdl_util.h  wifi.c  wifi.h
src/weather/: weather.c  weather.h
tools/: embed_text.py
